# TA4_shopping_service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_db.py  check_postgres.py  create_db.py  diagnose_db.py  docker-compose.yml  init_db.py  misc.xml  pyproject.toml  requirements.txt  run_app.py  vcs.xml
alembic/: env.py
app/: main.py
app/api/: auth.py  cart.py  products.py
app/core/: config.py  database.py  dependencies.py  security.py
app/crud/: cart.py  product.py  user.py
app/models/: cart.py  product.py  user.py
app/schemas/: cart.py  product.py  user.py
app/utils/: validators.py
inspectionProfiles/: Project_Default.xml
tests/: conftest.py  test_auth.py  test_cart.py  test_products.py
tests/tests/: test_database.py
