[project]
name = "shopping-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
